<resources>
    <string name="app_name">My Application</string>
    <string name="to" />
    <string name="subject" />
    <string name="message" />
    <string name="button11" > 1,1  </string>
    <string name="button12" > 1,2  </string>
    <string name="button13" > 1,3  </string>
    <string name="button14" > 1,4  </string>
    <string name="button21" > 2,1  </string>
    <string name="button22" > 2,2  </string>
    <string name="button23" > 2,3  </string>
    <string name="button24" > 2,4  </string>
    <string name="button31" > 3,1  </string>
    <string name="button32" > 3,2 </string>
    <string name="button33" > 3,3  </string>
    <string name="button34" > 3,4  </string>
    <string name="button41" > 4,1  </string>
    <string name="button42" > 4,2  </string>
    <string name="button43" > 4,3  </string>
    <string name="button44" > 4,4  </string>
</resources>